# Garfield-Platformer

./: CMakeLists.txt  README.md
config/: assets.txt  configFile.txt
levelFiles/: level_1.txt  level_2.txt
replays/: replay0.txt  replay1.txt  replay2.txt  replay3.txt
src/: Action.cpp  Action.h  Animation.cpp  Animation.h  Assets.cpp  Assets.h  Component.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  GameEngine.cpp  GameEngine.h  Physics.cpp  Physics.h  Scene.cpp  Scene.h  Scene_InGame.cpp  Scene_InGame.h  Scene_Menu.cpp  Scene_Menu.h  Vec2.cpp  Vec2.h  main.cpp
